[package]
name = "bluescreen-roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
bsod = "0.1.1"
egui-macroquad = "0.15.0"
get_if_addrs = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
ureq = "2.9.6"
