[package]
name = "bluescreen-roulette"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
debug = false

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
bsod = "0.1.1"
egui-macroquad = "0.15.0"
get_if_addrs = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
ureq = "2.9.6"
pfa = { git = "https://github.com/Jaycadox/pfa" }
lazy_static = "1.4.0"

[build-dependencies]
pfa = { git = "https://github.com/Jaycadox/pfa" }
